<!--
  ~ Copyright © 2021 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 12/21/21, 4:17 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<resources>

    <string name="applicationName">Premium Storefront</string>
    <string name="applicationNameMovies">Premium Storefront Movies</string>
    <string name="applicationNameBooks">Premium Storefront Books</string>
    <string name="applicationSummary">Collection Of Premium Applications &amp; Games &amp; Books &amp; Movies</string>

    <string name="allApplications">All Applications</string>
    <string name="allGames">All Games</string>

    <string name="favoriteDescription">Favorite Products</string>
    <string name="preferencesDescription">Preferences Of Premium Storefront</string>
    <string name="profileDescription">Your Profile</string>

    <string name="uniqueRecommendationText">Recommendations</string>

    <string name="searchActionDescription">Search Applications In Premium Storefront</string>
    <string name="filterActionDescription">Filter To See Your Preferred Applications</string>
    <string name="sortActionDescription">Sort List Of Applications</string>

    <string name="themeToggleDescription">Toggle Theme Of Application To Light Or Dark</string>
    <string name="supportDescription">Contact Our Support Team</string>
    <string name="changeLogDescription">See What Is New In Premium Storefront</string>

    <string name="submissionRequestDescription">To Developers Who Want To Feature Their Applications &amp; Games On Premium Storefront, Please Visit https://GeeksEmpire.co/PremiumStorefront/SubmissionRequest</string>

    <string name="installNowText">Install Now</string>

    <string name="categoryShowAllApplications">Show All</string>
    <string name="categoryShowAllGames">Show All</string>

    <string name="settingUpText">Setting Up…</string>

    <string name="updatingApplicationsDataText">Updating Applications Data…</string>
    <string name="updatingGamesDataText">Updating Games Data…</string>
    <string name="updatingBooksDataText">Updating Books Data…</string>
    <string name="updatingMoviesDataText">Updating Movies Data…</string>

    <string name="countryFilterText">Countries Of Developers</string>
    <string name="compatibilitiesFilterText">Android Version</string>

    <string name="priceSortText">Price: High To Low</string>
    <string name="rateSortText">Rate: High To Low</string>

    <string name="typeToSearchText">Type To Search…</string>

    <string name="nothingFoundText">Nothing Found</string>
    <string name="retryText">Retry</string>
    <string name="copyText">Copy</string>

    <string name="inAppUpdateDescription">An Update Has Just Been Prepared</string>
    <string name="inAppUpdateAction">
        <![CDATA[
            Complete It!
        ]]>
    </string>

    <string name="revertText">Revert</string>
    <string name="advancedSearchText">Advanced Search</string>

    <string name="rateText">Rate</string>
    <string name="shareText">Share</string>
    <string name="updateText">Update</string>

    <string name="doneText">Done.</string>
    <string name="proceedText">Proceed</string>

    <string name="followUsText">Follow Us</string>

    <string name="notSignUp">You Are Not A Member</string>

    <string name="noNetworkConnection">No Network Connection</string>

    <string name="moviesDynamicFeatureInstalled">Premium Storefront\'s Movies Section Installed</string>
    <string name="booksDynamicFeatureInstalled">Premium Storefront\'s Books Section Installed</string>

    <string name="welcomeText">Welcome %1$s To Premium Storefront…!</string>

    <string name="typeInstagram">Type Your Instagram Username</string>
    <string name="typeTwitter">Type Your Twitter Username</string>
    <string name="typeFacebook">Type Your Facebook Username</string>
    <string name="typePhoneNumber">Type Your Phone Number; +19876543210</string>

    <string name="receiveInvitationText">%1$s Invited You 🎉</string>
    <string name="inviteAction">Invite</string>
    <string name="inviteTitle">Invite To Premium Storefront</string>
    <string name="invitationDataReady">Invitation Data Copied &amp; Ready To Share</string>

    <string name="installActionDescription">Get It From Google Play Store</string>
    <string name="shareActionDescription">Share It With Your Friends</string>
    <string name="rateActionDescription">Rate &amp; Write Review For It</string>

    <string name="proceedAgreement">Agreed &amp; Proceed</string>
    <string name="privacyAgreement">Privacy Policy &amp; User Agreement</string>

    <string name="signOutText">Sign Out</string>
    <string name="signOutConfirmText">Confirm To Sign Out</string>

    <string name="applicationsSectionText">Applications</string>
    <string name="gamesSectionText">Games</string>
    <string name="booksSectionText">Books</string>
    <string name="moviesSectionText">Movies</string>
    <string name="title_premiumstorefrontbooks">Premium Storefront Books</string>
    <string name="title_administratorpanel">AdministratorPanel</string>

</resources>