<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2021 By Geeks Empire.
  ~
  ~ Created by Elias Fazel
  ~ Last modified 11/13/21, 6:56 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/premiumLight"
    tools:context=".Preferences.UserInterface.PreferencesControl">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/brandingBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tint="@color/dark"
        android:alpha="0.1"
        android:src="@drawable/premium_storefront_logo"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileImageColorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/black_transparent"
        android:background="@drawable/preferences_glowing_background"

        apps:layout_constraintHeight_percent="0.5"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintStart_toStartOf="parent"/>

    <net.geeksempire.blurry.effect.view.RealtimeBlurView
        android:id="@+id/blurryBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        apps:realtimeBlurGradientType="none"
        apps:realtimeFirstColor="@color/premiumLightTransparent"
        apps:realtimeBlurRadius="13dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileImageView"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="29dp"
        android:layout_marginStart="19dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:contentDescription="@string/profileDescription"

        apps:cornerRadius="51dp"
        apps:icon="@drawable/not_login_icon"
        apps:iconSize="67dp"
        apps:iconPadding="0dp"
        apps:iconGravity="textStart"
        apps:iconTintMode="multiply"
        apps:backgroundTint="@color/white"
        apps:rippleColor="@color/default_color_game"

        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileNameView"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginStart="7dp"
        android:paddingHorizontal="13dp"
        android:gravity="center_vertical"
        android:textAllCaps="false"
        android:text="@string/notSignUp"
        android:textSize="29sp"
        android:textStyle="bold"
        android:textColor="@color/premiumDark"
        android:fontFamily="@font/upcil"
        android:contentDescription="@string/profileDescription"

        apps:cornerRadius="51dp"
        apps:iconTintMode="add"
        apps:backgroundTint="@color/white"
        apps:rippleColor="@color/default_color_game"

        apps:layout_constraintTop_toTopOf="@id/profileImageView"
        apps:layout_constraintBottom_toBottomOf="@id/profileImageView"
        apps:layout_constraintStart_toEndOf="@id/profileImageView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rateItView"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginVertical="29dp"
        android:gravity="center"
        android:ellipsize="end"
        android:lines="1"
        android:textAllCaps="false"
        android:text="@string/rateText"
        android:textSize="51sp"
        android:textColor="@color/default_color_game_light"
        android:shadowColor="@color/default_color_game_bright"
        android:shadowRadius="19"
        android:shadowDy="0"
        android:shadowDx="0"
        android:fontFamily="@font/neon"
        android:contentDescription="@string/rateActionDescription"

        apps:cornerRadius="51dp"
        apps:strokeWidth="0.7dp"
        apps:strokeColor="@color/white_transparent"
        apps:rippleColor="@color/default_color_light"
        apps:backgroundTint="@color/premiumLight"

        apps:layout_constraintWidth_percent="0.53"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateItView"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginVertical="29dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="13dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:contentDescription="@string/rateActionDescription"

        apps:icon="@drawable/update_icon"
        apps:iconSize="39dp"
        apps:iconTint="@color/premiumDark"
        apps:iconGravity="textStart"
        apps:iconPadding="1dp"
        apps:cornerRadius="23sp"
        apps:strokeWidth="0.7dp"
        apps:strokeColor="@color/white_transparent"
        apps:rippleColor="@color/default_color_light"
        apps:backgroundTint="@color/premiumLight"

        apps:layout_constraintTop_toTopOf="@id/rateItView"
        apps:layout_constraintBottom_toBottomOf="@id/rateItView"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintEnd_toStartOf="@id/rateItView"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareItView"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginVertical="29dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="19dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:contentDescription="@string/rateActionDescription"

        apps:icon="@drawable/share_icon"
        apps:iconSize="39dp"
        apps:iconTint="@color/premiumDark"
        apps:iconGravity="textStart"
        apps:iconPadding="3dp"
        apps:cornerRadius="23sp"
        apps:strokeWidth="0.7dp"
        apps:strokeColor="@color/white_transparent"
        apps:rippleColor="@color/default_color_light"
        apps:backgroundTint="@color/premiumLight"

        apps:layout_constraintTop_toTopOf="@id/rateItView"
        apps:layout_constraintBottom_toBottomOf="@id/rateItView"
        apps:layout_constraintStart_toEndOf="@id/rateItView"
        apps:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="199dp"
        android:cacheColorHint="@android:color/transparent"

        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="131dp"
            android:paddingBottom="151dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/themeToggleView"
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:padding="29dp"
                android:background="@drawable/preferences_item_background_light"
                android:contentDescription="@string/themeToggleDescription"
                android:tooltipText="@string/themeToggleDescription"

                apps:lottie_rawRes="@raw/toggle_theme_animation"

                apps:layout_constraintTop_toTopOf="parent"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintEnd_toEndOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/supportView"
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_marginTop="29dp"
                android:padding="23dp"
                android:background="@drawable/preferences_item_background_light"
                android:contentDescription="@string/supportDescription"
                android:tooltipText="@string/supportDescription"

                apps:lottie_rawRes="@raw/support_animation"
                apps:lottie_autoPlay="true"
                apps:lottie_loop="true"

                apps:layout_constraintHorizontal_bias="0.13"
                apps:layout_constraintTop_toBottomOf="@id/themeToggleView"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintEnd_toEndOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/whatNewView"
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:layout_marginTop="29dp"
                android:padding="23dp"
                android:background="@drawable/preferences_item_background_light"
                android:contentDescription="@string/changeLogDescription"
                android:tooltipText="@string/changeLogDescription"

                apps:lottie_rawRes="@raw/what_s_new_animation"
                apps:lottie_autoPlay="true"
                apps:lottie_loop="true"

                apps:layout_constraintHorizontal_bias="0.87"
                apps:layout_constraintTop_toBottomOf="@id/themeToggleView"
                apps:layout_constraintStart_toStartOf="parent"
                apps:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/submissionRequestView"
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:layout_marginTop="29dp"
                android:layout_marginStart="5dp"
                android:padding="19dp"
                android:scaleType="fitCenter"
                android:background="@drawable/preferences_item_small_background_light"
                android:src="@drawable/developer_submission_icon_light"
                android:contentDescription="@string/submissionRequestDescription"
                android:tooltipText="@string/submissionRequestDescription"

                apps:layout_constraintTop_toBottomOf="@id/supportView"
                apps:layout_constraintStart_toStartOf="@id/supportView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>